--- a/deskover-ecommerce-website/src/main/resources/templates/checkout.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/checkout.html
@@ -144,7 +144,6 @@
 	      <div class="container pb-5 mb-2 mb-md-4">
 	      <div class="row">
 		  <section class="col-lg-8">
-			  <h2 class="h6 pb-3 mb-2 ">Chọn phương thức thanh toán</h2>
 		      <div class="accordion mb-2 "  id="payment-method">
 		      <div class="accordion-item ">
 		        <h3 class="accordion-header"><a class="accordion-button" href="#card" data-bs-toggle="collapse"><i class="ci-card fs-lg me-2 mt-n1 align-middle"></i>Thanh toán bằng thẻ ATM (Qua VNPay) </a></h3>
@@ -191,7 +190,7 @@
 		                    <option value="ACB"> Ngan hang ACB </option>
 		                    <option value="OCB"> Ngan hang OCB </option>
 		                </select> 
-		            </div>
+		            </div> <br>
 		            <button type="submit" class="btn btn-default  btn btn-outline-primary d-block w-100 mt-0">Pay on wallet</button>
 		       	  </form>  
 		          </div>
