--- a/deskover-ecommerce-website/src/main/resources/templates/checkout.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/checkout.html
@@ -6,7 +6,7 @@
         ~{::#handheld},
         ~{::#content}
     )}">
-
+    
 <head>
   <title>Deskover: Chi tiết giỏ hàng</title>
 </head>
@@ -74,7 +74,7 @@
 	              <div class="mb-3">
 	                <label class="form-label" for="checkout-city" >Tỉnh</label>
 	                <select name="province" class="form-select" id="checkout-city" ng-model="form.province" ng-change="change()" required>
-	                  <option value="">None</option>
+	                  <option value="">Vui lòng chọn tỉnh</option>
 	                  <option ng-selected="form.province == item.name" ng-repeat="item in province" ng-value="item.name">{{item.name}}</option>
 	                </select>
 	              </div>
@@ -83,7 +83,7 @@
 	              <div class="mb-3">
 	                <label class="form-label" for="checkout-company">Xã/ Huyện</label>
 	                <select name="district" class="form-select" id="checkout-city" ng-model="form.district" ng-change="change2()" required>
-	                  <option value="">None</option>
+	                  <option value="">Vui lòng chọn Xã Huyện</option>
 	                  <option name = "district" ng-selected="form.district == item.name" ng-repeat="item in district" ng-value="item.name">{{item.name}}</option>
 	                </select>
 	              </div>
@@ -94,7 +94,7 @@
 	              <div class="mb-3">
 	                <label class="form-label" for="checkout-company">Đường</label>
 	                <select name="ward" class="form-select" id="checkout-city" ng-model="form.ward" ng-change="address()" required>
-	                  <option value="">None</option>
+	                  <option value="">Vui lòng chọn đường</option>
 	                  <option name = "ward" ng-selected="form.ward == item.name" ng-repeat="item in ward" ng-value="item.name">{{item.name}}</option>
 	                </select>
 	              </div>
@@ -141,12 +141,21 @@
               <button  class="btn btn-primary btn-shadow d-block w-100 mt-4"><i class="fs-lg me-2"></i>Đặt hàng <i class="ci-arrow-right mt-sm-0 ms-1"></i></button>
             </div>
          </aside>
+
 	      <div class="container pb-5 mb-2 mb-md-4">
 	      <div class="row">
 		  <section class="col-lg-8">
+			   <span >
+			  	  <div class="form-check">
+					  <input ng-disabled="checked" class="form-check-input"  type="checkbox" ng-change="checkbox()" ng-model="check" value="" id="flexCheckIndeterminate">
+						  <label class="form-check-label" for="flexCheckIndeterminate">
+						    Giao hàng miễn phí trong nội thành TPHCM của Deskover
+						  </label>
+			  	  </div>
+			  </span>
 		      <div class="accordion mb-2 "  id="payment-method">
 		      <div class="accordion-item ">
-		        <h3 class="accordion-header"><a class="accordion-button" href="#card" data-bs-toggle="collapse"><i class="ci-card fs-lg me-2 mt-n1 align-middle"></i>Thanh toán bằng thẻ ATM (Qua VNPay) </a></h3>
+		        <h3 class="accordion-header"><a class="accordion-button" href="#card" data-bs-toggle="collapse">Thanh toán bằng thẻ ATM (Qua VNPay) </a></h3>
 		        <div class="accordion-collapse collapse hide" id="card" data-bs-parent="#payment-method">
 		          <div class="accordion-body">
 		            <p class="fs-sm">Thanh toán bằng credit card hoặc những thẻ sau:&nbsp;&nbsp;<img class="d-inline-block align-middle" src="img/cards.png" width="187" alt="Cerdit Cards"></p>
