--- a/deskover-ecommerce-website/src/main/resources/templates/components/navigation_header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/navigation_header.html
@@ -69,7 +69,7 @@
                                                 <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-user"></i></div>
                                                 <div class="navbar-tool-text ms-n3"><small>Đăng nhập</small>Tài khoản</div>
                                         </a>
-                                        <a class="navbar-tool ms-1 ms-lg-0 me-n1 me-lg-2" th:href="@{/user}" sec:authorize="isAuthenticated()">
+                                        <a class="navbar-tool ms-1 ms-lg-0 me-n1 me-lg-2" th:href="@{/account/profile}" sec:authorize="isAuthenticated()">
                                                 <div class="navbar-tool-icon-box"><i class="navbar-tool-icon ci-user"></i></div>
                                                 <div class="navbar-tool-text ms-n3">
                                                         <small>Tài khoản</small>
