--- a/deskover-ecommerce-website/src/main/resources/templates/account_profile.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/account_profile.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{layout/layout :: layout(  
-        ~{::title},
-        ~{::modal},
-        ~{::#content}
+    ~{::title},
+    ~{::modal_out},
+    ~{::modal_in},
+    ~{::#handheld},
+    ~{::#content}
     )}">
 
 <head>
@@ -20,19 +22,19 @@
                 <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Home</a></li>
-                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Account</a>
+                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Trang chủ</a></li>
+                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Tài khoản</a>
                             </li>
-                            <li class="breadcrumb-item text-nowrap active" aria-current="page">WishLish</li>
+                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Thông tin</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-                    <h1 class="h3 text-light mb-0">WishList</h1>
+                    <h1 class="h3 text-light mb-0">Thông Tin</h1>
                 </div>
             </div>
         </div>
-        <div class="container pb-5 mb-2 mb-md-4">
+        <div class="container pb-5 mb-2 mb-md-4" ng-controller="accCtrl">
             <div class="row">
                 <!-- Sidebar-->
                 <aside th:replace="components/user_sidebar.html :: component"></aside>
@@ -40,61 +42,54 @@
                 <section class="col-lg-8">
                     <!-- Toolbar-->
                     <div class="d-none d-lg-flex justify-content-between align-items-center pt-lg-3 pb-4 pb-lg-5 mb-lg-3">
-                        <h6 class="fs-base text-light mb-0">Update your profile details below:</h6><a class="btn btn-primary btn-sm" href="account-signin.html"><i class="ci-sign-out me-2"></i>Sign out</a>
+                        <h6 class="fs-base text-light mb-0">Thông tin tài khoản của bạn:</h6>
                     </div>
                     <!-- Profile form-->
-                    <form>
+                    <form class="needs-validation" novalidate enctype="multipart/form-data" ng-submit="profile.submit(form, myFileInput)" name="form">
+                        <div class="alert alert-success alert-dismissible fade show" role="alert" ng-if="profile.message">
+                            <i class="fa fa-check-circle fa-xl" aria-hidden="true"></i> {{profile.message}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
+                        <div class="alert alert-danger alert-dismissible fade show" role="alert" ng-if="profile.error">
+                            <i class="fa fa-exclamation-triangle fa-2xl" aria-hidden="true"></i>{{profile.error}}
+                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                        </div>
                         <div class="bg-secondary rounded-3 p-4 mb-4">
-                            <div class="d-flex align-items-center"><img class="rounded" src="img/shop/account/avatar.jpg" width="90" alt="Susan Gardner">
+                            <div class="d-flex align-items-center">
+                                <img class="rounded" ng-src="{{profile.avatar}}" width="90" alt="avatar">
                                 <div class="ps-3">
-                                    <button class="btn btn-light btn-shadow btn-sm mb-2" type="button"><i class="ci-loading me-2"></i>Change avatar</button>
-                                    <div class="p mb-0 fs-ms text-muted">Upload JPG, GIF or PNG image. 300 x 300 required.</div>
+                                    <button class="btn btn-light btn-shadow btn-sm mb-2" type="button" onclick="document.getElementById('myFileInput').click()" >
+                                        <i class="ci-loading me-2"></i>Thay đổi avatar</button>
+                                    <input type="file" ng-file-select="onFileSelect($files)" ng-model="profile.avatar" hidden id="myFileInput" name="myFileInput">
+                                    <div class="p mb-0 fs-ms text-muted">Chỉ nhận file JPG, GIF or PNG.</div>
                                 </div>
                             </div>
                         </div>
                         <div class="row gx-4 gy-3">
-                            <div class="col-sm-6">
-                                <label class="form-label" for="account-fn">First Name</label>
-                                <input class="form-control" type="text" id="account-fn" value="Susan">
-                            </div>
-                            <div class="col-sm-6">
-                                <label class="form-label" for="account-ln">Last Name</label>
-                                <input class="form-control" type="text" id="account-ln" value="Gardner">
-                            </div>
-                            <div class="col-sm-6">
-                                <label class="form-label" for="account-email">Email Address</label>
-                                <input class="form-control" type="email" id="account-email" value="s.gardner@example.com" disabled>
-                            </div>
-                            <div class="col-sm-6">
-                                <label class="form-label" for="account-phone">Phone Number</label>
-                                <input class="form-control" type="text" id="account-phone" value="+7 (805) 348 95 72" required>
-                            </div>
-                            <div class="col-sm-6">
-                                <label class="form-label" for="account-pass">New Password</label>
-                                <div class="password-toggle">
-                                    <input class="form-control" type="password" id="account-pass">
-                                    <label class="password-toggle-btn" aria-label="Show/hide password">
-                                        <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                    </label>
+                            <div class="col-12">
+                                <div class="form-group mt-3">
+                                    <label class="form-label" for="fullname">Tên đầy đủ<span class="text-danger">*</span></label>
+                                    <input class="form-control" ng-model="profile.form.fullname" type="text" required id="fullname" name="fullname">
+                                    <div class="invalid-feedback">Hãy nhập lại tên của bạn</div>
                                 </div>
                             </div>
-                            <div class="col-sm-6">
-                                <label class="form-label" for="account-confirm-pass">Confirm Password</label>
-                                <div class="password-toggle">
-                                    <input class="form-control" type="password" id="account-confirm-pass">
-                                    <label class="password-toggle-btn" aria-label="Show/hide password">
-                                        <input class="password-toggle-check" type="checkbox"><span class="password-toggle-indicator"></span>
-                                    </label>
+                            <div class="col-6">
+                                <div class="form-group mt-3">
+                                    <label class="form-label" for="account-email">Địa chỉ Email</label>
+                                    <input class="form-control" type="email" id="account-email" value="{{account.detail.email}}" disabled>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="form-group mt-3">
+                                    <label class="form-label" for="fullname">Số điện thoại hiện tại<span class="text-danger">*</span></label>
+                                    <input class="form-control" ng-model="profile.form.phone" type="tel" required id="fullname" name="fullname" pattern="(09|03|07|08|05)+([0-9]{8})" maxlength="10" value="{{account.detail.phone}}">
+                                    <div class="invalid-feedback">Hãy nhập lại Số điện thoại của bạn!</div>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <hr class="mt-2 mb-3">
-                                <div class="d-flex flex-wrap justify-content-between align-items-center">
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="subscribe_me" checked>
-                                        <label class="form-check-label" for="subscribe_me">Subscribe me to Newsletter</label>
-                                    </div>
-                                    <button class="btn btn-primary mt-3 mt-sm-0" type="button">Update profile</button>
+                                <div class="d-flex flex-wrap justify-content-center align-items-center">
+                                    <button class="btn btn-primary mt-3 mt-sm-0" type="submit">Cập nhật thông tin</button>
                                 </div>
                             </div>
                         </div>
