--- a/deskover-ecommerce-website/src/main/resources/templates/components/user_sidebar.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/user_sidebar.html
@@ -1,11 +1,12 @@
 <!-- Sidebar-->
-<aside class="col-lg-4 pt-4 pt-lg-0 pe-xl-5" th:fragment="component">
+<aside class="col-lg-4 pt-4 pt-lg-0 pe-xl-5" th:fragment="component" ng-init="account.loadDatabase()">
   <div class="bg-white rounded-3 shadow-lg pt-1 mb-5 mb-lg-0">
     <div class="d-md-flex justify-content-between align-items-center text-center text-md-start p-4">
       <div class="d-md-flex align-items-center">
-        <div class="img-thumbnail rounded-circle position-relative flex-shrink-0 mx-auto mb-2 mx-md-0 mb-md-0" style="width: 6.375rem;"><span class="badge bg-warning position-absolute end-0 mt-n2" data-bs-toggle="tooltip" title="Reward points">384</span><img class="rounded-circle" th:src="@{/img/shop/account/avatar.jpg}" alt="Susan Gardner"></div>
+        <div class="img-thumbnail rounded-circle position-relative flex-shrink-0 mx-auto mb-2 mx-md-0 mb-md-0" style="width: 6.375rem;"><span class="badge bg-warning position-absolute end-0 mt-n2" data-bs-toggle="tooltip" title="Reward points"></span>
+          <img class="rounded-circle" ng-src="/img/users/{{account.detail.avatar}}" alt="{{account.detail.fullname}}"></div>
         <div class="ps-md-3">
-          <h3 class="fs-base mb-0">Susan Gardner</h3><span class="text-accent fs-sm">s.gardner@example.com</span>
+          <h3 class="fs-base mb-0">{{account.detail.fullname}}</h3><span class="text-accent fs-sm">{{account.detail.email}}</span>
         </div>
       </div><a class="btn btn-primary d-lg-none mb-2 mt-3 mt-md-0" href="#account-menu" data-bs-toggle="collapse" aria-expanded="false"><i class="ci-menu me-2"></i>Account menu</a>
     </div>
@@ -22,7 +23,7 @@
       </div>
       <ul class="list-unstyled mb-0">
         <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:classappend="${#httpServletRequest.requestURI == '/account/profile'} ? 'active' : ''" th:href="@{/account/profile}"><i class="ci-user opacity-60 me-2"></i>Thay đổi thông tin</a></li>
-        <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:classappend="${#httpServletRequest.requestURI == '/account/profile'} ? 'active' : ''" th:href="@{/account/profile}"><i class="ci-user opacity-60 me-2"></i>Thay đổi mật khẩu</a></li>
+        <li class="border-bottom mb-0"><a class="nav-link-style d-flex align-items-center px-4 py-3" th:classappend="${#httpServletRequest.requestURI == '/account/password'} ? 'active' : ''" th:href="@{/account/password}"><i class="ci-key opacity-60 me-2"></i>Thay đổi mật khẩu</a></li>
       </ul>
     </div>
   </div>
