finish all basic ecommerce

--- a/deskover-ecommerce-website/src/main/resources/templates/account_profile.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/account_profile.html
@@ -8,7 +8,7 @@
     )}">
 
 <head>
-    <title>Deskover: Account Profile</title>
+    <title>Deskover: Thông tin tài khoản</title>
 </head>
 
 <body id="content">
@@ -23,7 +23,7 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
                             <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Trang chủ</a></li>
-                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Tài khoản</a>
+                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account/profile}">Tài khoản</a>
                             </li>
                             <li class="breadcrumb-item text-nowrap active" aria-current="page">Thông tin</li>
                         </ol>
