--- a/deskover-ecommerce-website/src/main/resources/templates/account_order.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/account_order.html
@@ -8,13 +8,11 @@
     )}">
 
 <head>
-    <title>Deskover: OrderDetail</title>
+    <title>Deskover: Đơn hàng</title>
 </head>
 
 <body id="content">
     <div id="modal">
-        <!-- Order Details Modal-->
-        <th:block th:replace="components/modal/order_detail.html :: modal"></th:block>
     </div>
     <div id="content">
         <!-- Page Title-->
@@ -23,15 +21,15 @@
                 <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Home</a></li>
-                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Account</a>
+                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Trang chủ</a></li>
+                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account/profile}">Tài khoản</a>
                             </li>
-                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Order Detail</li>
+                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Đơn hàng</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-                    <h1 class="h3 text-light mb-0">Order Detail</h1>
+                    <h1 class="h3 text-light mb-0">Danh sách đơn hàng</h1>
                 </div>
             </div>
         </div>
@@ -44,84 +42,55 @@
                     <!-- Toolbar-->
                     <div class="d-flex justify-content-between align-items-center pt-lg-2 pb-4 pb-lg-5 mb-lg-3">
                         <div class="d-flex align-items-center">
-                            <label class="d-none d-lg-block fs-sm text-light text-nowrap opacity-75 me-2" for="order-sort">Sort orders:</label>
-                            <label class="d-lg-none fs-sm text-nowrap opacity-75 me-2" for="order-sort">Sort orders:</label>
-                            <select class="form-select" id="order-sort">
-                                <option>All</option>
-                                <option>Delivered</option>
-                                <option>In Progress</option>
-                                <option>Delayed</option>
-                                <option>Canceled</option>
-                            </select>
+                          <label class="d-none d-lg-block fs-sm text-light text-nowrap opacity-75 me-2" for="order-sort">Bộ lọc:</label>
+                          <label class="d-lg-none fs-sm text-nowrap opacity-75 me-2" for="order-sort">Bộ lọc:</label>
+                          <select class="form-select" id="order-sort" ng-model="order.filter" ng-change="order.loadDatabase()">
+                            <option value="0">Tất cả</option>
+                            <option value="1">Đã giao</option>
+                            <option value="2">Đang xử lý</option>
+                            <option value="3">Đã thanh toán</option>
+                            <option value="4">Chưa thanh toán</option>
+                          </select>
                         </div>
-                    </div>
+                      </div>
                     <!-- Orders list-->
                     <div class="table-responsive fs-md mb-4">
                         <table class="table table-hover mb-0">
                             <thead>
                                 <tr>
-                                    <th>Order #</th>
-                                    <th>Date Purchased</th>
-                                    <th>Status</th>
-                                    <th>Total</th>
+                                    <th>Mã đơn #</th>
+                                    <th>Đã giao</th>
+                                    <th>Chưa giao</th>
+                                    <th>Thanh toán</th>
+                                    <th>Tổng giá trị</th>
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td class="py-3"><a class="nav-link-style fw-medium fs-sm" href="#order-details" data-bs-toggle="modal">34VB5540K83</a></td>
-                                    <td class="py-3">May 21, 2019</td>
-                                    <td class="py-3"><span class="badge bg-info m-0">In Progress</span></td>
-                                    <td class="py-3">$358.75</td>
+                                <tr ng-repeat="o in order.list" ng-click="order.detail(o.id)">
+                                    <td class="py-3">{{o.id}}</td>
+                                    <td class="py-3">{{o.orderDate}}</td>
+                                    <td class="py-3"><span class="badge m-0" ng-class="o.osCode === 'GH-TB' || o.osCode === 'C-HUY' || o.osCode === 'HUY' || o.osCode === 'GH-TB' ?'bg-danger':(o.osCode === 'GH-TC'?'bg-success':(o.osCode === 'LH-TB'?'bg-warning':'bg-info'))">{{o.orderStatus}}</span></td>
+                                    <td class="py-3"><span class="badge m-0" ng-class="o.psCode === 'C-TT'?'bg-danger':(o.psCode === 'D-TT'?'bg-success':(o.psCode === 'C-HT'?'bg-warning':'bg-info'))">{{o.paymentStatus}}</span></td>
+                                    <td class="py-3">{{o.total|number}} <small>VND</small></td>
                                 </tr>
-                                <tr>
-                                    <td class="py-3"><a class="nav-link-style fw-medium fs-sm" href="#order-details" data-bs-toggle="modal">78A643CD409</a></td>
-                                    <td class="py-3">December 09, 2018</td>
-                                    <td class="py-3"><span class="badge bg-danger m-0">Canceled</span></td>
-                                    <td class="py-3"><span>$760.50</span></td>
-                                </tr>
-                                <tr>
-                                    <td class="py-3"><a class="nav-link-style fw-medium fs-sm" href="#order-details" data-bs-toggle="modal">112P45A90V2</a></td>
-                                    <td class="py-3">October 15, 2018</td>
-                                    <td class="py-3"><span class="badge bg-warning m-0">Delayed</span></td>
-                                    <td class="py-3">$1,264.00</td>
-                                </tr>
-                                <tr>
-                                    <td class="py-3"><a class="nav-link-style fw-medium fs-sm" href="#order-details" data-bs-toggle="modal">28BA67U0981</a></td>
-                                    <td class="py-3">July 19, 2018</td>
-                                    <td class="py-3"><span class="badge bg-success m-0">Delivered</span></td>
-                                    <td class="py-3">$198.35</td>
-                                </tr>
-                                <tr>
-                                    <td class="py-3"><a class="nav-link-style fw-medium fs-sm" href="#order-details" data-bs-toggle="modal">502TR872W2</a></td>
-                                    <td class="py-3">April 04, 2018</td>
-                                    <td class="py-3"><span class="badge bg-success m-0">Delivered</span></td>
-                                    <td class="py-3">$2,133.90</td>
-                                </tr>
-                                <tr>
-                                    <td class="py-3"><a class="nav-link-style fw-medium fs-sm" href="#order-details" data-bs-toggle="modal">47H76G09F33</a></td>
-                                    <td class="py-3">March 30, 2018</td>
-                                    <td class="py-3"><span class="badge bg-success m-0">Delivered</span></td>
-                                    <td class="py-3">$86.40</td>
-                                </tr>
+                                
                             </tbody>
                         </table>
                     </div>
                     <!-- Pagination-->
-                    <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation">
+                    <nav class="d-flex justify-content-between pt-2" aria-label="Page navigation" ng-if="order.totalPage>1">
                         <ul class="pagination">
-                            <li class="page-item"><a class="page-link" href="#"><i class="ci-arrow-left me-2"></i>Prev</a></li>
+                            <li class="page-item"><button class="page-link" ng-click="order.changePage(order.currentPage-1)" href="#"><i class="ci-arrow-left me-2"></i>Trang Trước</button></li>
                         </ul>
                         <ul class="pagination">
-                            <li class="page-item d-sm-none"><span class="page-link page-link-static">1 / 5</span></li>
-                            <li class="page-item active d-none d-sm-block" aria-current="page"><span class="page-link">1<span class="visually-hidden">(current)</span></span>
+                            <li class="page-item d-sm-none"><span class="page-link page-link-static">{{order.currentPage+1}} / {{order.totalPage}}</span></li>
+                            <li class="page-item d-none d-sm-block" ng-repeat="p in [].constructor(order.totalPage) track by $index" aria-current="page" ng-class="order.currentPage === $index ? 'active':''">
+                                <span class="page-link" ng-if="order.currentPage == $index">{{$index+1}}<span class="visually-hidden">(current)</span></span>
+                                <button class="page-link" ng-if="order.currentPage != $index" ng-click="order.changePage($index)">{{$index+1}}</button>
                             </li>
-                            <li class="page-item d-none d-sm-block"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item d-none d-sm-block"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item d-none d-sm-block"><a class="page-link" href="#">4</a></li>
-                            <li class="page-item d-none d-sm-block"><a class="page-link" href="#">5</a></li>
                         </ul>
                         <ul class="pagination">
-                            <li class="page-item"><a class="page-link" href="#" aria-label="Next">Next<i class="ci-arrow-right ms-2"></i></a></li>
+                            <li class="page-item"><button class="page-link" href="#" ng-click="order.changePage(order.currentPage+1)" aria-label="Next">Trang Sau<i class="ci-arrow-right ms-2"></i></button></li>
                         </ul>
                     </nav>
                 </section>
