--- a/deskover-ecommerce-website/src/main/resources/templates/account_password.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/account_password.html
@@ -8,7 +8,7 @@
     )}">
 
 <head>
-    <title>Deskover: Account Profile</title>
+    <title>Deskover: Đổi mật khẩu</title>
 </head>
 
 <body id="content">
@@ -22,15 +22,15 @@
                 <div class="order-lg-2 mb-3 mb-lg-0 pt-lg-2">
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb breadcrumb-light flex-lg-nowrap justify-content-center justify-content-lg-start">
-                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Home</a></li>
-                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account}">Account</a>
+                            <li class="breadcrumb-item"><a class="text-nowrap" th:href="@{/index}"><i class="ci-home"></i>Trang chủ</a></li>
+                            <li class="breadcrumb-item text-nowrap"><a th:href="@{/account/profile}">Tài khoản</a>
                             </li>
-                            <li class="breadcrumb-item text-nowrap active" aria-current="page">WishLish</li>
+                            <li class="breadcrumb-item text-nowrap active" aria-current="page">Đổi mật khẩu</li>
                         </ol>
                     </nav>
                 </div>
                 <div class="order-lg-1 pe-lg-4 text-center text-lg-start">
-                    <h1 class="h3 text-light mb-0">WishList</h1>
+                    <h1 class="h3 text-light mb-0">Cập nhật mật khẩu</h1>
                 </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
                 <section class="col-lg-8">
                     <!-- Toolbar-->
                     <div class="d-none d-lg-flex justify-content-between align-items-center pt-lg-3 pb-4 pb-lg-5 mb-lg-3">
-                        <h6 class="fs-base text-light mb-0">Cập nhật mật khẩu:</h6>
+                        <h6 class="fs-base text-light mb-0">Hãy nhập mật khẩu mới</h6>
                     </div>
                     <!-- Profile form-->
                     <form class="needs-validation" novalidate ng-submit="password.submit(form)" name="form">
