--- a/deskover-ecommerce-website/src/main/resources/templates/components/modal/order_detail.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/modal/order_detail.html
@@ -3,85 +3,29 @@
   <div class="modal-dialog modal-lg modal-dialog-scrollable">
       <div class="modal-content">
           <div class="modal-header">
-              <h5 class="modal-title">Order No - 34VB5540K83</h5>
+              <h5 class="modal-title">Đơn hàng số [[${od.id}]]</h5>
               <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body pb-0">
               <!-- Item-->
-              <div class="d-sm-flex justify-content-between mb-4 pb-3 pb-sm-2 border-bottom">
-                  <div class="d-sm-flex text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto" href="shop-single-v1.html" style="width: 10rem;"><img src="img/shop/cart/01.jpg" alt="Product"></a>
+              <div class="d-sm-flex justify-content-between mb-4 pb-3 pb-sm-2 border-bottom" th:each="i: ${od.items}">
+                  <div class="d-sm-flex text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto" href="shop-single-v1.html" style="width: 10rem;"><img th:src="@{'/img/shop/products/' + ${i.item.imgUrl}}" alt="Product"></a>
                       <div class="ps-sm-4 pt-2">
-                          <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">Women Colorblock Sneakers</a></h3>
-                          <div class="fs-sm"><span class="text-muted me-2">Size:</span>8.5</div>
-                          <div class="fs-sm"><span class="text-muted me-2">Color:</span>White &amp; Blue</div>
-                          <div class="fs-lg text-accent pt-2">$154.<small>00</small></div>
+                          <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">[[${i.item.name}]]</a></h3>
+                          <div class="fs-sm"><span class="text-muted me-2">[[${i.item.category}]]</span></div>
+                          <div class="fs-lg text-accent pt-2">[[${#numbers.formatInteger(i.price,3,'COMMA')}]]<small> VND</small></div>
                       </div>
                   </div>
                   <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Quantity:</div>1
+                      <div class="text-muted mb-2">Số lượng:</div> [[${i.quantity}]]
                   </div>
                   <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Subtotal</div>$154.<small>00</small>
-                  </div>
-              </div>
-              <!-- Item-->
-              <div class="d-sm-flex justify-content-between my-4 pb-3 pb-sm-2 border-bottom">
-                  <div class="d-sm-flex text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto" href="shop-single-v1.html" style="width: 10rem;"><img src="img/shop/cart/02.jpg" alt="Product"></a>
-                      <div class="ps-sm-4 pt-2">
-                          <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">TH Jeans City Backpack</a></h3>
-                          <div class="fs-sm"><span class="text-muted me-2">Brand:</span>Tommy Hilfiger</div>
-                          <div class="fs-sm"><span class="text-muted me-2">Color:</span>Khaki</div>
-                          <div class="fs-lg text-accent pt-2">$79.<small>50</small></div>
-                      </div>
-                  </div>
-                  <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Quantity:</div>1
-                  </div>
-                  <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Subtotal</div>$79.<small>50</small>
-                  </div>
-              </div>
-              <!-- Item-->
-              <div class="d-sm-flex justify-content-between my-4 pb-3 pb-sm-2 border-bottom">
-                  <div class="d-sm-flex text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto" href="shop-single-v1.html" style="width: 10rem;"><img src="img/shop/cart/03.jpg" alt="Product"></a>
-                      <div class="ps-sm-4 pt-2">
-                          <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">3-Color Sun Stash Hat</a></h3>
-                          <div class="fs-sm"><span class="text-muted me-2">Brand:</span>The North Face</div>
-                          <div class="fs-sm"><span class="text-muted me-2">Color:</span>Pink / Beige / Dark blue</div>
-                          <div class="fs-lg text-accent pt-2">$22.<small>50</small></div>
-                      </div>
-                  </div>
-                  <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Quantity:</div>1
-                  </div>
-                  <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Subtotal</div>$22.<small>50</small>
-                  </div>
-              </div>
-              <!-- Item-->
-              <div class="d-sm-flex justify-content-between my-4">
-                  <div class="d-sm-flex text-center text-sm-start"><a class="d-inline-block flex-shrink-0 mx-auto" href="shop-single-v1.html" style="width: 10rem;"><img src="img/shop/cart/04.jpg" alt="Product"></a>
-                      <div class="ps-sm-4 pt-2">
-                          <h3 class="product-title fs-base mb-2"><a href="shop-single-v1.html">Cotton Polo Regular Fit</a></h3>
-                          <div class="fs-sm"><span class="text-muted me-2">Size:</span>42</div>
-                          <div class="fs-sm"><span class="text-muted me-2">Color:</span>Light blue</div>
-                          <div class="fs-lg text-accent pt-2">$9.<small>00</small></div>
-                      </div>
-                  </div>
-                  <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Quantity:</div>1
-                  </div>
-                  <div class="pt-2 ps-sm-3 mx-auto mx-sm-0 text-center">
-                      <div class="text-muted mb-2">Subtotal</div>$9.<small>00</small>
+                      <div class="text-muted mb-2">Tông tiền</div>[[${#numbers.formatInteger(i.price*i.quantity,3,'COMMA')}]]<small> VND</small>
                   </div>
               </div>
           </div>
           <!-- Footer-->
           <div class="modal-footer flex-wrap justify-content-between bg-secondary fs-md">
-              <div class="px-2 py-1"><span class="text-muted">Subtotal:&nbsp;</span><span>$265.<small>00</small></span></div>
-              <div class="px-2 py-1"><span class="text-muted">Shipping:&nbsp;</span><span>$22.<small>50</small></span></div>
-              <div class="px-2 py-1"><span class="text-muted">Tax:&nbsp;</span><span>$9.<small>50</small></span></div>
-              <div class="px-2 py-1"><span class="text-muted">Total:&nbsp;</span><span class="fs-lg">$297.<small>00</small></span></div>
           </div>
       </div>
   </div>
