--- a/deskover-ecommerce-website/src/main/resources/templates/item.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/item.html
@@ -94,7 +94,7 @@
                                             <del class="fs-lg text-muted"> [[${#numbers.formatInteger(product.price,3,'COMMA')}]] <small>VND</small></del>
                                         </div>
                                         <div class="position-relative me-n4 mb-3">
-                                            <div class="product-badge product-available mt-n1 fw-bold"  th:if="${product.sale}">
+                                            <div class="product-badge product-available mt-n1 fw-bold">
                                                 <img width="20" height="20" class=" ls-is-cached lazyloaded" alt="Giảm sốc" data-src="https://cdn.tgdd.vn/2020/10/content/icon1-50x50.png" src="https://cdn.tgdd.vn/2020/10/content/icon1-50x50.png">
                                                 Giảm sốc
                                             </div>
