--- a/deskover-ecommerce-website/src/main/resources/templates/checkout.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/checkout.html
@@ -223,6 +223,11 @@
       </div>
     </div>
 
+		<div id="handheld" th:remove="tag">
+			<!-- Toolbar for handheld devices (Default)-->
+			<div th:replace="components/handhelds/normal.html :: handheld"></div>
+		</div>
+
 </body>
 </html>
 <script src="/assets/main.js"></script>
