--- a/deskover-ecommerce-website/src/main/resources/templates/about_us.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/about_us.html
@@ -106,6 +106,11 @@
       </section>
     </div>
 
+    <div id="handheld" th:remove="tag">
+      <!-- Toolbar for handheld devices (Default)-->
+      <div th:replace="components/handhelds/normal.html :: handheld"></div>
+    </div>
+
 
 </body>
 
