--- a/deskover-ecommerce-website/src/main/resources/templates/cart.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/cart.html
@@ -92,6 +92,11 @@
         </div>
     </div>
 
+    <div id="handheld" th:remove="tag">
+        <!-- Toolbar for handheld devices (Default)-->
+        <div th:replace="components/handhelds/normal.html :: handheld"></div>
+    </div>
+
 
 </body>
 
