--- a/deskover-ecommerce-website/src/main/resources/templates/find.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/find.html
@@ -29,6 +29,10 @@
     <h4 th:text="${msg}" class="text-center text-danger"></h4> 
     </div><br>  
   </div>
+  <div id="handheld" th:remove="tag">
+    <!-- Toolbar for handheld devices (Default)-->
+  <div th:replace="components/handhelds/normal.html :: handheld"></div>
+</div>
 </body>
 </html>
 
