--- a/deskover-ecommerce-website/src/main/resources/templates/components/navigation_header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/navigation_header.html
@@ -36,7 +36,7 @@
         <!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page.-->
         <div class="navbar-sticky bg-light">
                 <div class="navbar navbar-expand-lg navbar-light">
-                        <div class="container"><a class="navbar-brand d-none d-sm-block me-3 flex-shrink-0" th:href="@{/}"><img th:src="@{/img/logo/full.png}" width="142" alt="Deskover"></a><a class="navbar-brand d-sm-none me-2" href="index.html"><img th:src="@{/img/logo/full.png}" width="142" alt="Deskover"></a>
+                        <div class="container"><a class="navbar-brand d-none d-sm-block me-3 flex-shrink-0" th:href="@{/}"><img th:src="@{/img/logo/full.png}" width="142" alt="Deskover"></a><a class="navbar-brand d-sm-none me-2" th:href="@{/}"><img th:src="@{/img/logo/full.png}" width="142" alt="Deskover"></a>
                                 <!-- Search-->
                                 <form class="input-group d-none d-lg-flex flex-nowrap mx-4" action="/shop" ng-init="search.init()" id="searchForm">
                                         <i class="ci-search position-absolute top-50 start-0 translate-middle-y ms-3"></i>
